# hc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  HLINQHighlighting.xml  README.md  appveyor.yml  binplace.txt  build.bat  cliff.toml  hq.txt  linux_build.sh  win64.hlq  win64s.hlq
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: ci.yml  cleanup.yml  codeql-analysis.yml
bf/: bf.py  makebin.bat  setup.py
cmake/: zig-toolchain-x86_64-linux-gnu.cmake  zig-toolchain-x86_64-linux-musl.cmake
docs/: HQ.docx  Readme.HQ.en.st  Readme.HQ.ru.st  Readme.Htpwd.ru.st  Readme.Htpwdc.en.st  Readme.Htpwdc.ru.st  Readme.en.st  Readme.hc.en.st  Readme.hc.ru.st  Readme.ru.st  license.txt
docs/md4/: Readme.en.txt  Readme.ru.txt
docs/md5/: Readme.en.txt  Readme.ru.txt
docs/sha1/: Readme.en.txt  Readme.ru.txt
docs/sha256/: Readme.en.txt  Readme.ru.txt
docs/sha384/: Readme.en.txt  Readme.ru.txt
docs/sha512/: Readme.en.txt  Readme.ru.txt
docs/whirlpool/: Readme.en.txt  Readme.ru.txt
lib/Debug/: antlr3cd.lib  tomcrypt.lib
lib/Release/: antlr3c.lib
src/: .editorconfig  .gitignore  Microsoft.VCToolsVersion.14.13.props  PVSSettings.xml  build.bat  buildmd5.bat  formatting.bat  hc.sln  hc.xml  hlinq.hlq  hlinq.txt  htpasswd.txt  linq2hash.sln  md5.xml  pg.sln  pg.xml  pgo.hlq  profile.bat  reformat.bat  tests.xml  uncrustify.bat  uncrustify.cfg
src/.nuget/: packages.config
src/Install/: Debug.bat  Install.nsisproj  LanguageStrings.nsh  LanguageStringsAll.nsh  LanguageStringsApc.nsh  LanguageStringsCrc32.nsh  LanguageStringsHLINQ.nsh  LanguageStringsMd4.nsh  LanguageStringsMd5.nsh  LanguageStringsSha1.nsh  LanguageStringsSha256.nsh  LanguageStringsSha384.nsh  LanguageStringsSha512.nsh  LanguageStringsWhirlpool.nsh  Readme.en.txt  Readme.ru.txt  Release.bat  _x64.nsh  license.txt  main.nsi  mainAll.nsi  mainApc.nsi  mainCrc32.nsi  mainHLINQ.nsi  mainMd4.nsi  mainMd5.nsi  mainSha1.nsi  mainSha256.nsi  mainSha384.nsi  mainSha512.nsi  mainSingle.nsi  mainTemplate.nsi  mainWhirlpool.nsi  x64.nsh  x86.nsh
src/_tst/: ArgtableDateTest.cpp  ArgtableDateTest.h  ArgtableDoubleTest.cpp  ArgtableDoubleTest.h  ArgtableFileTest.cpp  ArgtableFileTest.h  ArgtableLitTest.cpp  ArgtableLitTest.h  ArgtableRexTest.cpp  ArgtableRexTest.h  ArgtableTest.cpp  ArgtableTest.h  ArgtableTestBase.cpp  ArgtableTestBase.h  BackendTest.cpp  BackendTest.h  BruteForceTest.cpp  BruteForceTest.h  BufferedTest.cpp  BufferedTest.h  EncodingTest.cpp  EncodingTest.h  FrontendTest.cpp  FrontendTest.h  HLINQTest.cpp  HLINQTest.h  HashTest.cpp  HashTest.h  ProcessorTest.cpp  ProcessorTest.h  SizeToString.cpp  SizeToString.h  TestUsingVectors.cpp  TestUsingVectors.h  ToStringTime.cpp  ToStringTime.h  TreeTest.cpp  TreeTest.h  _tst.cpp  _tst.vcxproj  (+5 more)
src/_tst.net/: Apc.cs  ArchLinux.cs  ArchWindows.cs  Asserts.cs  CmdFileTests.cs  CmdStringTests.cs  ExeWrapper.cs  Extensions.cs  FileTests.cs  GostTests.cs  Hash.cs  HashBase.cs  HashCalculator.cs  HashCalculatorFileTests.cs  HashCalculatorStringTests.cs  HashFixture.cs  HashQuery.cs  HashQueryFileTests.cs  HashQueryStringTests.cs  HashStringTestsBase.cs  Md4.cs  Md5.cs  NtlmCalculator.cs  ProcessRunner.cs  QueryFileTests.cs  QueryStringTests.cs  Sha1.cs  Sha256.cs  Sha384.cs  Sha512.cs  StringTests.cs  TGost.cs  THashCalculator.cs  TestsImplementation.Linux.cs  TestsImplementation.Windows.cs  TestsImplementation.cs  Whirlpool.cs  _tst.net.csproj  gost_tv_cryptopro.txt  hash_tv.txt  (+2 more)
src/_tst.pgo/: PgoTests.cs  _tst.pgo.csproj  app.config  packages.config
src/apc/: apc.c  apc.h  apc.rc  apc.vcxproj  htpwdc.c  implementation.c  implementation.h  pwd.txt  targetver.h
src/argtable/: arg_date.c  arg_dbl.c  arg_end.c  arg_file.c  arg_int.c  arg_lit.c  arg_rem.c  arg_rex.c  arg_str.c  argtable.vcxproj  argtable2.c  argtable2.h  config.h  getopt.c  getopt.h  getopt1.c
src/bf/: bf.cpp  bf.vcproj  bf.vcxproj  stdafx.cpp  targetver.h
src/bf.gui/: DynamicRadioGroup.Designer.cs  DynamicRadioGroup.cs  MainDlg.Designer.cs  MainDlg.cs  Program.cs  bf.gui.csproj
src/crc32/: crc32.c  crc32.h  crc32.rc  crc32.vcxproj  implementation.c  implementation.h  targetver.h
src/doc.gen/: App.config  Program.cs  doc.gen.csproj
src/hc/: builtin.c  builtin.h  configuration.c  configuration.h  crc32.cu  dir.c  dir.h  file.c  file.h  gpu.cu  hash.c  hash.h  hc.c  hc.h  hc.rc  hc.vcxproj  hc.vcxproj.filters  localization.target  md2.cu  md4.cu  md5.cu  packages.config  resource.h  rmd160.cu  sha1.cu  sha1_kernel.cu  sha224.cu  sha256.cu  sha384.cu  sha512.cu  str.c  str.h  targetver.h  whirlpool.cu
src/hlinq/: HLINQ.bat  HLINQ.g  HLINQWalker.g  builtin.c  builtin.h  compiler.c  compiler.h  configuration.c  configuration.h  crc32def.c  crc32def.h  dir.c  dir.h  file.c  file.h  hash.c  hash.h  hashes.c  hashes.h  hc.c  hc.h  hc.rc  hlinq.c  hlinq.h  hlinq.rc  hlinq.vcxproj  hlinq.vcxproj.filters  implementation.c  implementation.h  libtom.c  libtom.h  localization.target  localization.xml  md2.c  md2.h  md4.c  md4.h  md4def.c  md4def.h  md5.c  (+19 more)
src/htpwdc/: implementation.h  pwd.txt
src/l2h/: backend.c  backend.h  compile.bat  configuration.c  configuration.h  frontend.c  frontend.h  hashes.c  hashes.h  l2h.c  l2h.flex.c  l2h.lex  l2h.output  l2h.rc  l2h.tab.c  l2h.tab.h  l2h.vcxproj  l2h.vcxproj.filters  l2h.y  linq2hash.y  processor.c  processor.h  resource.h  targetver.h  treeutil.c  treeutil.h
src/libtomcrypt/: libtomcrypt.vcxproj
src/linq2hash/: backend.c  backend.h  compile.bat  configuration.c  configuration.h  frontend.c  frontend.h  hashes.c  hashes.h  l2h.c  linq2hash.c  linq2hash.flex.c  linq2hash.lex  linq2hash.output  linq2hash.rc  linq2hash.tab.c  linq2hash.tab.h  linq2hash.vcxproj  linq2hash.vcxproj.filters  linq2hash.y  resource.h  targetver.h  treeutil.c  treeutil.h
src/md4/: implementation.c  implementation.h  md4.rc  md4.vcxproj  resource.h  targetver.h
src/md5/: DebugHelplers.c  DebugHelplers.h  implementation.c  implementation.h  (+7 more)
src/pgoptimize/pgtempl/: Cargo.toml
src/pgoptimize/pgtempl/src/: main.rs
trid/: makebin.bat  trid.py
(+488 files in other folders)
