[package]
name = "pgtempl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["std", "color", "suggestions", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = "6.2.0"